# RestClient

./: Cargo.toml  README.md
.github/workflows/: pr-tests.yml
docs/: spec.md
examples/: basic.http  env-example.http  graphql.http  http-client.env.json  rsocket.http  websocket.http
src/: client.rs  config.rs  curl.rs  env.rs  graphql.rs  lib.rs  main.rs  parser.rs  rsocket.rs  websocket.rs
