[package]
name = "http-client"
version = "0.1.0"
edition = "2021"
authors = ["Young Cho <youngikcho@gmail.com>"]
description = "HTTP Client implementation in Rust, compatible with IntelliJ IDEA HTTP Client format"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "native-tls"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
url = "2.5"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
rustls = "0.21"
rustls-pemfile = "1.0"
base64 = "0.21"
chrono = "0.4"
rsocket_rust = "0.7"
rsocket_rust_transport_websocket = "0.7"

[dev-dependencies]
tempfile = "3.8"
